RESOLVED FIXED281032
REGRESSION(284791@main): [Win] wtf/RefTrackerMixin.h(112,36): warning: 'WTF::RefTrackerLoggingDisabledScope::RefTrackerLoggingDisabledScope<T>' redeclared without 'dllimport' attribute: 'dllexport' attribute added
https://bugs.webkit.org/show_bug.cgi?id=281032
Summary REGRESSION(284791@main): [Win] wtf/RefTrackerMixin.h(112,36): warning: 'WTF::...
Fujii Hironori
Reported 2024-10-07 18:48:40 PDT
Buildbot: builder Windows-64-bit-Debug-Build build 860 https://build.webkit.org/#/builders/1189/builds/860 [284/2113] Building CXX object Source\JavaScriptCore\CMakeFiles\LowLevelInterpreterLib.dir\llint\LowLevelInterpreter.cpp.obj In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\llint\LowLevelInterpreter.cpp:613: In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\wasm\WasmCallee.h:33: In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\runtime\StackAlignment.h:28: In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\interpreter\CallFrame.h:30: In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\runtime\VM.h:56: In file included from C:\BW\Windows-64-bit-Debug-Build\build\Source\JavaScriptCore\heap\Strong.h:33: C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/RefTrackerMixin.h(112,36): warning: 'WTF::RefTrackerLoggingDisabledScope::RefTrackerLoggingDisabledScope<T>' redeclared without 'dllimport' attribute: 'dllexport' attribute added [-Winconsistent-dllimport] 112 | RefTrackerLoggingDisabledScope<T>::RefTrackerLoggingDisabledScope() | ^ C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/RefTrackerMixin.h(40,24): note: previous declaration is here 40 | WTF_EXPORT_PRIVATE RefTrackerLoggingDisabledScope(); | ^ C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/RefTrackerMixin.h(118,36): warning: 'WTF::RefTrackerLoggingDisabledScope::~RefTrackerLoggingDisabledScope<T>' redeclared without 'dllimport' attribute: 'dllexport' attribute added [-Winconsistent-dllimport] 118 | RefTrackerLoggingDisabledScope<T>::~RefTrackerLoggingDisabledScope() | ^ C:\BW\Windows-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/RefTrackerMixin.h(41,24): note: previous declaration is here 41 | WTF_EXPORT_PRIVATE ~RefTrackerLoggingDisabledScope(); | ^ 2 warnings generated.
Attachments
Fujii Hironori
Comment 1 2024-10-07 19:24:49 PDT
EWS
Comment 2 2024-10-07 21:07:16 PDT
Committed 284811@main (e4dbf952205e): <https://commits.webkit.org/284811@main> Reviewed commits have been landed. Closing PR #34820 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-07 21:11:29 PDT
Note You need to log in before you can comment on or make changes to this bug.