REGRESSION(284791@main): wtf/RefTrackerMixin.h(112,36): warning: 'WTF::RefTrackerLoggingDisabledScope::RefTrackerLoggingDisabledScope<T>' redeclared without 'dllimport' attribute: 'dllexport' attribute added https://bugs.webkit.org/show_bug.cgi?id=281032

Unreviewed build fix for Windows Debug builds.
After <https://commits.webkit.org/284791@main>, it reported an compiler warning.

> wtf/RefTrackerMixin.h(112,36): warning: 'WTF::RefTrackerLoggingDisabledScope::RefTrackerLoggingDisabledScope<T>' redeclared without 'dllimport' attribute: 'dllexport' attribute added [-Winconsistent-dllimport]

WTF_EXPORT_PRIVATE doesn't have to be applied to inline functions.

* Source/WTF/wtf/RefTrackerMixin.h:
(WTF::RefTrackerLoggingDisabledScope::RefTrackerLoggingDisabledScope):
(WTF::RefTrackerLoggingDisabledScope::~RefTrackerLoggingDisabledScope):
(WTF::RefTrackerLoggingDisabledScope<T>::RefTrackerLoggingDisabledScope): Deleted.
(WTF::RefTrackerLoggingDisabledScope<T>::~RefTrackerLoggingDisabledScope): Deleted.

Canonical link: https://commits.webkit.org/284811@main